Add registration form

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 max-line-length = 88
 
 [tool:pytest]
-python_files=nurseconnect_registration/test*.py
-addopts = --verbose --ds=nurseconnect_registration.testsettings --ignore=ve --cov=nurseconnect_registration --no-cov-on-fail
+python_files=nurseconnect_registration/test*.py registrations/test*.py
+addopts = --verbose --ds=nurseconnect_registration.testsettings --ignore=ve --cov=nurseconnect_registration --cov=registrations --no-cov-on-fail
 
 [coverage:run]
 branch =True
