Add API endpoint for creating referral links from RapidPro webhooks

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 max-line-length = 88
 
 [tool:pytest]
-python_files=nurseconnect_registration/test*.py registrations/test*.py
+python_files=nurseconnect_registration/test*.py registrations/*test*.py
 addopts = --verbose --ds=nurseconnect_registration.testsettings --ignore=ve --cov=nurseconnect_registration --cov=registrations --no-cov-on-fail
 
 [coverage:run]
