--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
       install:
         - "pip install -e ."
         - "pip install -r requirements-dev.txt"
+        - python manage.py collectstatic
       script:
         - flake8
         - mypy .
